--- a/build.gradle
+++ b/build.gradle
@@ -1,296 +1,126 @@
-apply from: 'constants.gradle'
-
 buildscript {
     repositories {
-        jcenter()
-        mavenLocal()
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.google.gms:google-services:3.0.0'
         classpath 'io.fabric.tools:gradle:1.+'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    }
+}
+apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+    maven { url "https://jitpack.io" }
+    maven { url "http://dl.bintray.com/lukaville/maven" }
+    google()
+}
+
+
+android {
+    compileSdkVersion 27
+    buildToolsVersion '26.0.2'
+    defaultConfig {
+        applicationId "com.os.fastlap"
+        minSdkVersion 21
+        targetSdkVersion 27
+        vectorDrawables.useSupportLibrary = true
+        versionCode 1
+        multiDexEnabled true
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        dexOptions {
+            preDexLibraries = false
+            javaMaxHeapSize "4g"
+        }
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    aaptOptions {
+        cruncherEnabled = false
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-        mavenLocal()
-        mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    // circle imageview
+    //facebook
+    compile files('libs/universal-image-loader-1.9.4-with-sources.jar')
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
     }
+    // dimention
+    // Rx Java
+    // Retrofit
+    compile project(':coverflow')
+    // searchable spinner
+    /**
+     *   Use Easy Image
+     */
+    compile 'com.github.jkwiecien:EasyImage:1.3.0'
+    // socket.io
+    compile('com.github.nkzawa:socket.io-client:0.3.0') {
+        exclude group: 'org.json', module: 'json'
+    }
+    /*   compile 'com.github.nkzawa:socket.io-client:0.3.0'*/
+    //countrycodes
+    compile 'com.android.support:appcompat-v7:27.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:cardview-v7:27.+'
+    compile 'com.android.support:customtabs:27.+'
+    compile 'com.android.support:recyclerview-v7:27.+'
+    compile 'com.google.firebase:firebase-messaging:11.6.0'
+    compile 'com.google.android.gms:play-services-auth:11.6.0'
+    compile 'com.google.android.gms:play-services-location:11.6.0'
+    compile 'com.google.android.gms:play-services-places:11.6.0'
+    compile 'com.google.android.gms:play-services-ads:11.6.0'
+    compile 'com.android.support:design:27.+'
+    compile 'com.android.support:support-annotations:27.+'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.15.0'
+    compile 'com.intuit.sdp:sdp-android:1.0.4'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.prolificinteractive:material-calendarview:1.4.0'
+    compile 'com.google.android.gms:play-services-maps:11.6.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    compile 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
+    compile 'com.googlecode.libphonenumber:libphonenumber:6.2'
+    compile 'tech.gusavila92:java-android-websocket-client:1.1.4'
+    compile 'com.github.darsh2:MultipleImageSelect:v0.0.4'
+    compile 'com.erikagtierrez.multiple_media_picker:multiple-media-picker:1.0.2'
+    compile 'com.tbuonomo.andrui:viewpagerdotsindicator:1.0.1'
+    compile 'com.stripe:stripe-android:4.1.5'
+    compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.0'
+    compile 'com.nbsp:library:1.8'
+    compile 'com.github.omadahealth:swipy:1.2.3@aar'
+    testCompile 'junit:junit:4.12'
+    compile files('libs/opencsv-4.0.jar')
+    compile files('libs/commons-lang3-3.1.jar')
+    compile files('libs/poi-3.7.jar')
+    compile 'com.afollestad:sectioned-recyclerview:0.5.0'
+    compile 'com.github.QuadFlask:colorpicker:0.0.13'
+    compile 'com.github.ravindu1024:android-keyboardlistener:1.0.0'
+    compile "com.facebook.fresco:fresco:1.3.0"
+    compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
+
+    compile 'com.ethanhua:skeleton:1.0.1'
+    compile 'io.supercharge:shimmerlayout:1.0.2'
+
 }
+apply plugin: 'com.google.gms.google-services'
 
-// TODO Remove once either Facebook or Robolectric fix the crash: https://github.com/robolectric/robolectric/issues/2579#issuecomment-276526911
-gradle.taskGraph.whenReady { graph ->
-    graph.allTasks.findAll { it.name ==~ /testReleaseUnitTest/ }*.enabled = false
-}
-
-//Skip Javadoc generation for Java 1.8 as it breaks build
-if (JavaVersion.current().isJava8Compatible()) {
-    allprojects {
-        tasks.withType(Javadoc) {
-            options.addStringOption('Xdoclint:none', '-quiet')
-        }
-    }
-}
-
-/**
- * Configure common tasks on all the submodules
- */
-allprojects { project ->
-
-    // Get constants, this is where we store things
-    // like the list of submodules or the version
-    project.apply from: "$rootDir/constants.gradle"
-
-    def isLibrary = 'library'.equals(project.name)
-    def isSubmodule = submodules.contains(project.name)
-
-    if (isSubmodule || isLibrary) {
-
-        // So that we can resolve 'android' variable
-        project.apply plugin: 'com.android.library'
-        android {
-            compileSdkVersion compileSdk
-            buildToolsVersion "${buildTools}"
-        }
-
-        // Task to generate sources JAR
-        task sourcesJar(type: Jar) {
-            classifier = 'sources'
-            from android.sourceSets.main.java.srcDirs
-        }
-
-        // Task to generate javadoc
-        task javadoc(type: Javadoc) {
-            source = android.sourceSets.main.java.srcDirs
-            classpath += configurations.compile
-            classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-        }
-
-        // Task to generate javadoc JAR
-        task javadocJar(type: Jar, dependsOn: javadoc) {
-            classifier = 'javadoc'
-            from javadoc.destinationDir
-        }
-
-        // Define base name for archives
-        // Ex: firebase-ui-auth
-        archivesBaseName = isSubmodule ? "firebase-ui-${project.name}" : "firebase-ui"
-
-        // Use tasks above to define artifacts
-        artifacts {
-            archives javadocJar
-            archives sourcesJar
-        }
-
-        // So that we can define publication
-        project.apply plugin: 'maven-publish'
-
-        publishing {
-            // By passing -Pcustom_local=/some/path and running the
-            // publishLibraryPublicationToCustomLocalRepository task you can publish this library to a
-            // custom maven repository location on your machine.
-            repositories {
-                maven {
-                    name 'CustomLocal'
-                    url uri(project.hasProperty('custom_local') ? project.getProperty('custom_local') : '/tmp/')
-                }
-            }
-
-            repositories {
-                maven {
-                    name 'BuildLocal'
-                    url "$buildDir/repo"
-                }
-            }
-        }
-    }
-
-    // POM to meet maven specs
-    if (isLibrary || isSubmodule) {
-        def targetName = isLibrary ? 'monolithLibrary' : "${project.name}Library"
-
-        publishing {
-            publications {
-                "${targetName}"(MavenPublication) {
-                    pom.withXml {
-                        // Common values
-                        def repoUrl = 'https://github.com/firebase/FirebaseUI-Android'
-                        def scmUrl = 'scm:git:git@github.com/firebase/firebaseui-android.git'
-
-                        // Name
-                        asNode().appendNode('name', artifactId)
-
-                        // Description
-                        asNode().appendNode('description', 'Firebase UI for Android')
-
-                        // Organization
-                        def organization = asNode().appendNode('organization')
-                        organization.appendNode('name', 'FirebaseUI')
-                        organization.appendNode('url', repoUrl)
-
-                        // URL
-                        asNode().appendNode('url', repoUrl)
-
-                        // SCM
-                        def scm = asNode().appendNode('scm')
-                        scm.appendNode('connection', scmUrl)
-                        scm.appendNode('developerConnection', scmUrl)
-                        scm.appendNode('url', repoUrl)
-                        scm.appendNode('tag', 'HEAD')
-
-                        // Developers
-                        def developer = asNode().appendNode('developers').appendNode('developer')
-                        developer.appendNode('id', 'samtstern')
-                        developer.appendNode('email', 'samstern@google.com')
-                        developer.appendNode('organization', 'Firebase')
-                        developer.appendNode('organizationUrl', 'https://firebase.google.com')
-                        def roles = developer.appendNode('roles')
-                        roles.appendNode('role', 'Project-Administrator')
-                        roles.appendNode('role', 'Developer')
-                        developer.appendNode('timezone', '-8')
-
-                        // Licenses
-                        def license = asNode().appendNode('licenses').appendNode('license')
-                        license.appendNode('name', 'The Apache License, Version 2.0')
-                        license.appendNode('url', 'http://www.apache.org/licenses/LICENSE-2.0.txt')
-                    }
-                }
-            }
-        }
-    }
-
-    if (isSubmodule) {
-        publishing {
-
-            // Define a publication for each submodule
-            publications {
-
-                // Ex: authLibrary(MavenPublication)
-                "${project.name}Library"(MavenPublication) {
-                    groupId group
-                    artifactId archivesBaseName
-                    version version
-
-                    // Release AAR, Sources, and JavaDoc
-                    artifact "$buildDir/outputs/aar/$archivesBaseName-release.aar"
-                    artifact javadocJar
-                    artifact sourcesJar
-
-                    pom.withXml {
-                        def dependenciesNode = asNode().getAt("dependencies")[0]
-                        if (dependenciesNode == null) {
-                            dependenciesNode = asNode().appendNode("dependencies")
-                        }
-
-                        // Add all that are 'compile'
-                        configurations.compile.allDependencies.each {
-                            def dependencyNode = dependenciesNode.appendNode('dependency')
-                            dependencyNode.appendNode('groupId', it.group)
-                            dependencyNode.appendNode('artifactId', it.name)
-                            dependencyNode.appendNode('version', it.version)
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    if (isLibrary) {
-
-        // Define the monolith publication
-        publishing {
-
-            publications {
-                monolithLibrary(MavenPublication) {
-                    groupId group
-                    artifactId archivesBaseName
-                    version version
-
-                    artifact "$buildDir/outputs/aar/$archivesBaseName-release.aar"
-                    artifact javadocJar
-                    artifact sourcesJar
-
-                    // Monolith is just a POM that depends on the others
-                    pom.withXml {
-                        def dependenciesNode = asNode().getAt("dependencies")[0]
-                        if (dependenciesNode == null) {
-                            dependenciesNode = asNode().appendNode("dependencies")
-                        }
-
-                        // Add a maven dependency on each submodule
-                        submodules.each { module ->
-                            def dependencyNode = dependenciesNode.appendNode('dependency')
-                            dependencyNode.appendNode('groupId', group)
-                            dependencyNode.appendNode('artifactId', "firebase-ui-${module}")
-                            dependencyNode.appendNode('version', version)
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    // Bintray Configuration (applies to submodule and the monolith)
-    if (isSubmodule || isLibrary) {
-        project.apply plugin: 'com.jfrog.bintray'
-
-        def archivesBaseName = isLibrary ? 'firebase-ui' : "firebase-ui-${project.name}"
-        def publicationName = isLibrary ? 'monolithLibrary' : "${project.name}Library"
-        def pomLoc = isLibrary ? "$buildDir/publications/monolithLibrary/pom-default.xml" : "$buildDir/publications/${project.name}Library/pom-default.xml"
-
-        group = project.ext.group
-        version = project.ext.version
-
-        def versionName = project.ext.version
-
-        bintray {
-            user = hasProperty('BINTRAY_USER') ? getProperty('BINTRAY_USER') : System.getenv('BINTRAY_USER')
-            key = hasProperty('BINTRAY_KEY') ? getProperty('BINTRAY_KEY') : System.getenv('BINTRAY_KEY')
-            publications = [publicationName]
-
-            filesSpec {
-                from pomLoc
-                into "com/firebaseui/$archivesBaseName/$versionName/"
-                rename { String fileName ->
-                    "${archivesBaseName}-${version}.pom"
-                }
-            }
-
-            configurations = ['archives']
-
-            pkg {
-                repo = 'firebase-ui'
-                name = archivesBaseName
-                userOrg = 'firebaseui'
-                licenses = ['Apache-2.0']
-                vcsUrl = 'https://github.com/firebase/FirebaseUI-Android.git'
-
-                version {
-                    name = versionName
-                }
-            }
-        }
-    }
-}
-
-allprojects {
-    afterEvaluate { project ->
-        def isSubmodule = submodules.contains(project.name)
-
-        if (isSubmodule) {
-            // Only applies to submodules, not the library module
-            def pomTask = "generatePomFileFor${project.name.capitalize()}LibraryPublication"
-
-            // Convenience task to prepare everything we need for releases
-            task prepareArtifacts(dependsOn: [javadocJar, sourcesJar, assembleRelease, pomTask]) {}
-        }
-
-    }
-}
